force-app/main/default/objects/Contact/fields/EmailBackUp__c.field-meta.xml
<CustomField>
    <fullName>EmailBackUp__c</fullName>
    <label>EmailBackUp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>