force-app/main/default/objects/Contact/fields/EmploymentClassification__c.field-meta.xml
<CustomField>
    <fullName>EmploymentClassification__c</fullName>
    <label>EmploymentClassification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>정규</fullName>
            </value>
            <value>
                <fullName>계약</fullName>
            </value>
            <value>
                <fullName>임시</fullName>
            </value>
            <value>
                <fullName>위탁</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>