force-app/main/default/objects/Contact/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>