force-app/main/default/objects/Contact/fields/isAdminUpdate__c.field-meta.xml
<CustomField>
    <fullName>isAdminUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAdminUpdate</label>
    <type>Checkbox</type>
</CustomField>