force-app/main/default/objects/Contact/fields/IsCafetariaTeacher__c.field-meta.xml
<CustomField>
    <fullName>IsCafetariaTeacher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCafetariaTeacher</label>
    <type>Checkbox</type>
</CustomField>