force-app/main/default/objects/Contact/fields/OtherInfo__c.field-meta.xml
<CustomField>
    <fullName>OtherInfo__c</fullName>
    <label>OtherInfo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>