force-app/main/default/objects/Contact/fields/PV_KNVKGB__c.field-meta.xml
<CustomField>
    <fullName>PV_KNVKGB__c</fullName>
    <label>PV_KNVKGB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A01</fullName>
                <label>회계 담당자</label>
            </value>
            <value>
                <fullName>A02</fullName>
                <label>검수 담당자</label>
            </value>
            <value>
                <fullName>A03</fullName>
                <label>구매 담당자</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>