force-app/main/default/objects/Contact/fields/PV_KUNNR__c.field-meta.xml
<CustomField>
    <fullName>PV_KUNNR__c</fullName>
    <label>고객ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>