force-app/main/default/objects/Contact/fields/PV_NO__c.field-meta.xml
<CustomField>
    <fullName>PV_NO__c</fullName>
    <externalId>true</externalId>
    <label>PV_NO</label>
    <length>5</length>
    <type>Text</type>
</CustomField>