force-app/main/default/objects/Contact/fields/PV_TALKT_VK__c.field-meta.xml
<CustomField>
    <fullName>PV_TALKT_VK__c</fullName>
    <label>담당자 통화가능시간</label>
    <length>100</length>
    <type>Text</type>
</CustomField>