force-app/main/default/objects/Contact/fields/WeddingAnniversary__c.field-meta.xml
<CustomField>
    <fullName>WeddingAnniversary__c</fullName>
    <label>WeddingAnniversary</label>
    <type>Date</type>
</CustomField>