force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Account.Address__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>모든 연락처</label>
</ListView>