force-app/main/default/objects/Contact/listViews/DietitianListView_Final.listView-meta.xml
<ListView>
    <fullName>DietitianListView_Final</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.MonthlySales__c</columns>
    <columns>Account.SizePerson__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Remark__c</columns>
    <filterScope>Everything</filterScope>
    <label>영양사 정보</label>
    <sharedTo>
        <roleAndSubordinates>SFDC_3001_4709_Div_BM</roleAndSubordinates>
    </sharedTo>
</ListView>